<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".StudentFragment">

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_attendance_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableTop="@drawable/attendance"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/attendance_report"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccentText" />

                <Button
                    android:id="@+id/btn_time_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableTop="@drawable/time_table"
                    android:drawablePadding="10dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/time_table"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccentText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_student_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableTop="@drawable/students_profile"
                    android:drawablePadding="10dp"
                    android:text="@string/student_profile"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccentText" />

                <Button
                    android:id="@+id/btn_school_messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableTop="@drawable/school_messages"
                    android:drawablePadding="10dp"
                    android:text="@string/school_messages"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccentText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_teacher_notes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableTop="@drawable/teachers_notes"
                    android:drawablePadding="10dp"
                    android:text="@string/teachers_notes"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccentText" />

                <Button
                    android:id="@+id/btn_home_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:drawableTop="@drawable/home_work"
                    android:drawablePadding="10dp"
                    android:text="@string/home_work"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccentText" />

            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>